<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.devspark.robototextview.widget.RobotoEditText
        android:id="@+id/reminder_title"
        android:singleLine="true"
        android:layout_margin="10dp"
        app:typeface="roboto_condensed_regular"
        android:hint="@string/reminder_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.devspark.robototextview.widget.RobotoButton
        android:id="@+id/start_date"
        android:layout_margin="10dp"
        app:typeface="roboto_condensed_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.devspark.robototextview.widget.RobotoButton
        android:id="@+id/notif_date"
        android:layout_margin="10dp"
        app:typeface="roboto_condensed_regular"
        android:text="@string/reminder_date_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.devspark.robototextview.widget.RobotoEditText
        android:id="@+id/reminder_details"
        android:layout_margin="10dp"
        android:hint="@string/reminder_desc"
        android:lines="3"
        app:typeface="roboto_condensed_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.devspark.robototextview.widget.RobotoCheckBox
        android:id="@+id/google_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:typeface="roboto_condensed_regular"
        android:text="@string/reminder_calendar" />

    <com.devspark.robototextview.widget.RobotoButton
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:typeface="roboto_condensed_regular"
        android:text="@string/reminder_save" />

</LinearLayout>