<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card_background"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:padding="10dp">

        <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:typeface="roboto_condensed_regular"
            android:text="@string/incoming_reimnder"/>

        <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:typeface="roboto_condensed_bold"
            android:textSize="12sp"
            android:layout_marginRight="3dp"
            android:text="@string/subject_label"/>

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/subject_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:typeface="roboto_condensed_regular"
            android:textSize="16sp"
            android:ellipsize="end"/>

        <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="3dp"
            app:typeface="roboto_condensed_bold"
            android:textSize="12sp"
            android:text="@string/start_label"/>

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/start_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:typeface="roboto_condensed_regular"
            android:textSize="16sp" />

        <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="3dp"
            app:typeface="roboto_condensed_bold"
            android:textSize="12sp"
            android:text="@string/end_label"/>

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/end_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:typeface="roboto_condensed_regular"
            android:textSize="16sp"
            android:ellipsize="end" />
    </LinearLayout>

</FrameLayout>
